--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
-
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Gimnastiar</title>
+	<title>hobbies</title><link rel="stylesheet" type="text/css" href="artikel.css">
 </head>
-<body style= "background-color: black" >
+<body>
+		<div class="wrapper">
+			<div class="header">
+				
+			</div>
+			<div class="menu">
+				<ul>
+					<a href="tugas.html"><li>home</li></a>
+					<a href="artikel.html"><li>about</li></a>
+				</ul>
+			</div> 
+			<div class="content">
+						<header>
+							<h1>industri pariwisata</h1>
+							<p>Meskipun Indonesia memiliki tempat-tempat menarik untuk pariwisata - wilayah pedalaman yang indah, reruntuhan budaya dan sejarah yang menarik, pantai-pantai, kehidupan malam (Jakarta dan Bali), dan banyak lagi - negara ini gagal menarik jumlah turis asing yang besar. Memang betul bahwa Indonesia mungkin mencapai targetnya untuk menyambut 10 juta turis asing di 2015, namun angka ini jauh lebih rendah dari jumlah turis yang mengunjungi negara-negara tetangga Singapura (15 juta) atau Malaysia (27 juta). Indonesia tidak kalah cantik ataupun menarik. Jadi, apa yang telah menghambat pertumbuhan yang lebih cepat di sektor pariwisata Indonesia?
+							</p>
+						</header>
+			</div>
+        </div>	
 
-<H1 style="color:white;">Biodata</H1>
-<h2 style="color:white;">Nama:Gimnastiar Muhamad Abdullah</h2>
-<h2 style="color:white;">TTL: Bogor,04-05-2002</h2>
-<h2 style="color:white;">Sekolah:SMK-SMAK Bogor</h2>
-<h2 style="color:white;">Hobi:Traveling</h2> <h2 style="color:white;">Alamat:Jl.raya puncak desa cipayung Rt4/5 NO.94</h2>
-<img src="https://github.com/gimnastiar/project-x/raw/master/61m.gif" width="600px" height="520px"> 
+	<footer></footer>
 
 </body>
 </html>
