--- a/index.html
+++ b/index.html
@@ -29,5 +29,12 @@
     <div class="text-center">
       <a class="btn btn-primary btn-lg" href="artikel.html" role="button">about hobby</a>
     </div>
+<footer>
+		<div class="container"></div>
+		<p class="text-center"> copyright 2019</p>
+	</footer>
+
 </body>
+</html>
+  </body>
 </html>
